# viettel_pdf

./: .gitignore  README.md  extract.py  install_env.sh  qa.py  run_extract.sh  run_qa.sh  search.py
extract/: extract.py  pyproject.toml
qa/: pyproject.toml  qa.py  search.py
