[project]
name = "extract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "transformers==4.47.1",
    "tokenizers==0.21.0",
    "addict>=2.4.0",
    "easydict>=1.13",
    "setuptools>=79.0.1",
    "uv>=0.9.8",
    "torch==2.6.0",
    "flash-attn==2.7.4.post1",
    "torchvision==0.21.0",
    "pymupdf>=1.26.6",
]
