[project]
name = "qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "transformers==4.53.2",
    "tokenizers==0.21.0",
    "vllm==0.8.0",
    "addict>=2.4.0",
    "easydict>=1.13",
    "setuptools>=79.0.1",
    "torch==2.6.0",
    "flash-attn==2.7.4.post1",
    "pandas>=2.3.3",
    "sentence-transformers>=5.1.2",
    "langchain>=0.0.27",
]


[tool.uv]
no-build-isolation = true